# monas

./: .dockerignore  .gitignore  Cargo.toml  Makefile  PRODUCT.md  README.md  SERVER_GUIDE.md  issue.md  structure.md
monas-account/: Cargo.toml  rustfmt.toml
monas-account/src/: application_service.rs  infrastructure.rs  lib.rs  main.rs
monas-account/src/application_service/: account_service.rs  command.rs  error.rs  mod.rs  port.rs  service.rs
monas-account/src/domain/: account.rs  delegation.rs  mod.rs
monas-account/src/infrastructure/: jwt_signer.rs  key_pair.rs  key_store.rs  mod.rs  public_key_repository.rs
monas-account/src/infrastructure/key_pair/: k256_key_pair.rs  p256_key_pair.rs
monas-account/src/presentation/: account.rs  mod.rs
monas-content/: Cargo.toml
monas-content/docs/reencrypt-content/: README.md  design.md  permission-check-comparison.md
monas-content/examples/: generate_hpke_recipient_key.rs
monas-content/src/: lib.rs  main.rs
monas-content/src/application_service/: content_service.rs  mod.rs
monas-content/src/application_service/content_service/: command.rs  mod.rs  port.rs  service.rs
monas-content/src/application_service/share_service/: command.rs  port.rs  service.rs
monas-content/src/domain/: content.rs  content_id.rs  encryption.rs  metadata.rs  mod.rs
monas-content/src/domain/content/: content.rs  encryption.rs  metadata.rs  mod.rs  provider.rs
monas-content/src/domain/share/: encryption.rs  key_envelope.rs  key_id.rs  mod.rs  share.rs
monas-content/src/infrastructure/: content_id.rs  encryption.rs  filesync_repository 2.rs  filesync_repository.rs  key_store.rs  key_wrapping.rs  mod.rs  public_key_directory.rs  repository.rs  share_repository.rs  state_node_client.rs
monas-content/src/infrastructure/crypto/: mod.rs
monas-content/src/infrastructure/key_pair/: aes_key_pair.rs
monas-content/src/infrastructure/storage/: local_storage.rs  mod.rs  traits.rs
monas-content/src/presentation/: base64_helpers 2.rs  base64_helpers.rs  content.rs  mod.rs  share.rs
monas-event-manager/: Cargo.toml  README.md  event_manager_sequence_diagram.html
monas-event-manager/src/: config.rs  event_bus.rs  event_subscription.rs  lib.rs  main.rs  sled_persistence.rs
monas-event-manager/src/event_bus/: event_bus.rs
monas-event-manager/src/event_subscription/: event_subscription.rs  mod.rs
monas-event-manager/tests/: integration_tests.rs  test_types.rs
monas-filesync/: Cargo.toml  README.md  filesync.toml.example
monas-filesync/src/: lib.rs
monas-filesync/src/infrastructure/: config.rs  mod.rs  path.rs  registry.rs
monas-filesync/src/infrastructure/providers/: google_drive.rs  ipfs.rs  local_desktop.rs  local_mobile.rs  mod.rs  onedrive.rs
monas-filesync/src/infrastructure/repository/: mod.rs
monas-filesync/tests/: integration_cloud_connectivity.rs  ipfs_local_daemon.rs
monas-gateway/: Cargo.toml
monas-gateway/src/: main.rs
monas-sdk/: Cargo.toml
monas-sdk/src/: lib.rs
monas-sdk/src/common/: api_error.rs  api_response.rs  base64url.rs  config.rs  mod.rs  state_node_auth.rs
monas-sdk/src/controller/: async_api.rs  content.rs  keypair.rs  mod.rs  share.rs  state.rs
monas-sdk/src/models/: content.rs  keypair.rs  mod.rs  share.rs  state.rs  state_node.rs
monas-sdk/tests/: content_controller_integration_test.rs  share_controller_integration_test.rs  sled_persistence_integration_test.rs  state_controller_integration_test.rs
monas-sdk/tests/support/: mod.rs
monas-state-node/: .gitignore  Cargo.toml  README.md  auth-implementation-plan 2.md
monas-state-node/infra/: compose.yaml
monas-state-node/infra/docker/: Dockerfile  entrypoint.sh
monas-state-node/infra/terraform/: README.md  ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  storage.tf  variables.tf
monas-state-node/infra/terraform/foundation/: alb.tf  dns.tf  ecs.tf  efs.tf  main.tf  outputs.tf  service_discovery.tf  variables.tf  vpc.tf  waf.tf
monas-state-node/scripts/: ci-e2e.sh  cleanup-local-nodes.sh  e2e-test.sh  generate-test-auth.sh  start-local-nodes-bft.sh  start-local-nodes.sh  stop-local-nodes-bft.sh  test-local-nodes.sh  test-with-auth.sh
monas-state-node/src/: lib.rs  node.rs  test_utils.rs
monas-state-node/src/application_service/: content_sync_service.rs  mod.rs  node.rs  state_node_service.rs
monas-state-node/src/domain/: access_control.rs  access_policy.rs  auth_capability.rs  auth_token 2.rs  auth_token.rs  auth_token_verifier.rs  content_network.rs  errors.rs  events.rs  identity.rs  mod.rs  placement 2.rs  placement.rs  share_token.rs  share_token_verifier.rs  state_node.rs  storage.rs  universal_network.rs  value_objects.rs
monas-state-node/src/infrastructure/: content_network_repository.rs  content_storage_repository.rs  crdt_repository.rs  crypto.rs  disk_capacity.rs  event_adapters.rs  event_bus_publisher.rs  event_handlers.rs  gossipsub_publisher.rs  http_api.rs  inbox_persistence.rs  key_management.rs  mod.rs  network.rs  node_repository.rs  outbox_persistence.rs  placement.rs  reliable_event_publisher.rs  repository.rs
monas-state-node/src/infrastructure/auth/: auth_token 2.rs  auth_token.rs  mod.rs  monas_account_adapter 2.rs  monas_account_adapter.rs  node_auth_adapter 2.rs  node_auth_adapter.rs  share_token.rs  signature_verifier.rs  test_helpers 2.rs  test_helpers.rs  ucan_adapter.rs
monas-state-node/src/infrastructure/network/: behaviour.rs  libp2p_network.rs  mod.rs  protocol.rs  public_key_protocol.rs  transport.rs
monas-state-node/src/infrastructure/persistence/: mod.rs  sled_access_control_repository.rs  sled_node_registry.rs  (+3 more)
monas-state-node/src/port/: auth_token.rs  authentication_service 2.rs  authentication_service.rs  authorization_service.rs  content_crdt.rs  content_repository.rs  event_publisher.rs  extended_public_key_registry.rs  mod.rs  peer_network.rs  persistence.rs  public_key_registry.rs
monas-state-node/src/presentation/: http_api.rs  mod.rs
monas-state-node/tests/: create_content_push_race_test.rs  e2e_multi_node_test.rs  integration_test.rs  public_key_exchange_test.rs
(+98 files in other folders)
