[package]
name = "monas-account"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
k256 = "0.13.4"
p256 = "0.13.2"
rand_core = "0.9.0"
sha3 = "0.10.8"
thiserror = "2.0.12"
sled = "0.34"
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.19.1"