[package]
name = "monas-content"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.40"
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
p256 = { version = "0.13.2", features = ["ecdh"] }
rand = "0.9.2"
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "2.0.12"
dyn-clone = "1.0.16"
axum = "0.8.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.19.1"
