[package]
name = "monas-content"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
monas-filesync = { path = "../monas-filesync", optional = true }
aes-gcm = "0.10.3"
aes = "0.8"
ctr = "0.9"
rand_core = { version = "0.6.4", features = ["std"] }
rand = "0.8.5"
chrono = { version = "0.4.40", features = ["serde"] }
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
p256 = { version = "0.13.2", features = ["ecdh"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "2.0.12"
dyn-clone = "1.0.16"
axum = "0.8.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sled = "0.34"
hpke-rs = { version = "0.3", features = ["hazmat"] }
hpke-rs-rust-crypto = "0.3"

[features]
default = ["filesync"]
filesync = ["monas-filesync", "monas-filesync/cloud-connectivity"]

[dev-dependencies]
tempfile = "3.19.1"
