[package]
name = "monas-event-manager"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "monas_event_manager"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }
sled = "0.34"
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
