[package]
name = "monas-filesync"
version = "0.1.0"
edition = "2021"

[lib]
name = "monas_filesync"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"], optional = true }
time = { version = "0.3", features = ["parsing", "formatting"], optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[features]
default = []
cloud-connectivity = ["reqwest", "time"]

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
tempfile = "3"
