[package]
name = "monas-sdk"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
monas-account = { path = "../monas-account" }
monas-content = { path = "../monas-content" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "3.1.4", features = ["json"] }
url = "2.5"
dotenv = "0.15"
