[package]
name = "monas-state-node"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0" 
rand = "0.8"
libp2p = { version = "0.55", features = ["tokio", "cbor", "dns", "kad", "noise", "macros", "request-response", "tcp", "websocket", "yamux", "autonat", "identify", "ping", "relay", "dcutr"] }