[package]
name = "monas-state-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "state-node"
path = "src/bin/state_node.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
# rand 0.8 is required for libp2p-webrtc compatibility
rand = "0.8"
cid = "0.11"
# multihash version must match what cid uses
multihash = "0.19"
multihash-codetable = { version = "0.1", features = ["sha2"] }
sha2 = "0.10"
async-std = { version = "1.12", features = ["attributes"] }
hex = "0.4"
futures = "0.3"
tracing = "0.1"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

# monas-event-manager for EventBus integration
monas-event-manager = { path = "../monas-event-manager" }

# crsl-lib for CRDT-based content versioning
crsl-lib = { git = "https://github.com/Monas-project/crsl-lib", branch = "fix/thread-safe-storage" }

# sled for persistence
sled = "0.34"

# fs2 for disk capacity queries (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = "0.4"

# HTTP API
axum = "0.7"

# CLI
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# libp2p for P2P networking
[dependencies.libp2p]
version = "0.56"
features = [
    "kad",
    "request-response",
    "gossipsub",
    "dns",
    "tcp",
    "yamux",
    "noise",
    "mdns",
    "identify",
    "tokio",
    "macros",
    "cbor",
    "quic",
]

# WebRTC transport (alpha - for future browser-to-server communication)
[dependencies.libp2p-webrtc]
version = "0.9.0-alpha.1"
features = ["tokio"]

[dev-dependencies]
tempfile = "3.8"

# ============================================================
# WASM Support (Future)
# ============================================================
# The following dependencies are prepared for future WASM/browser support.
# Currently, server-to-server communication is the primary focus.
# To enable WASM builds, uncomment and configure these dependencies.
#
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# libp2p = { version = "0.56", features = ["kad", "request-response", "gossipsub", "yamux", "noise", "identify", "wasm-bindgen", "macros", "cbor", "webrtc-websys"] }
# indexed_db_futures = "0.5"
# serde-wasm-bindgen = "0.6"
# wasm-bindgen-futures = "0.4"
# js-sys = "0.3"
# web-sys = { version = "0.3", features = ["Window", "IdbFactory", "IdbDatabase"] }
# getrandom = { version = "0.3", features = ["wasm_js"] }
# wasm-bindgen = "0.2"
# tokio = { version = "1", features = ["sync"] }
